[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "spoofbot"
authors = [{name = "raember", email = "raember@users.noreply.github.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
requires-python = ">= 3.10"
dependencies = [
    "requests",
    "urllib3",
    "bs4",
    "pillow",
    "toposort",
    "brotli",
    "publicsuffix2",
    "loguru",
    "python-dateutil",
    "aiohttp",
    "pyopenssl",
]

[project.optional-dependencies]
dev = [
    "docker",
]

[project.urls]
Home = "https://pypi.org/project/spoofbot/"
