[metadata]
name = spoofbot
version = attr: spoofbot.__version__
home_page = https://github.com/raember/spoofbot
author = raember
author_email = raember@users.noreply.github.com
license = MIT
description = A python requests wrapper that forms requests like real browsers and offers caching
long_description = file: README.md
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent


[options]
;packages=spoofbot
packages = find:
;package_dir=
;    =src
;packages = spoofbot
install_requires =
    urllib3
    requests
    bs4
    pillow
    toposort
    brotli
    publicsuffix2

[options.packages.find] #optional
where = spoofbot
include = spoofbot
exclude = tests