[metadata]
name = spoofbot
version = attr: spoofbot.__version__
home_page = https://github.com/raember/spoofbot
author = raember
author_email = raember@users.noreply.github.com
license = MIT
description = A python requests wrapper that forms requests like real browsers and offers caching
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent


[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    urllib3
    requests
    bs4
    pillow
    toposort
    brotli
    publicsuffix2
    loguru

[options.packages.find]
where = src
