[metadata]
name = spoofbot
version = attr: spoofbot.__version__
url = https://pypi.org/project/spoofbot/
project_urls =
    Source Code = https://github.com/raember/spoofbot
    Issue Tracker = https://github.com/raember/spoofbot
author = raember
author_email = raember@users.noreply.github.com
description = Web bot for spoofing browser behaviour when using python requests
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
[options]
packages = find:
package_dir =
    = src
python_requires = >= 3.6
install_requires =
    requests ~= 2.27.1
    beautifulsoup4 ~= 4.10.0
    pillow ~= 9.0.1
    toposort ~= 1.7
    brotli ~= 1.0.9
    publicsuffix2
    loguru ~= 0.6.0
    python-dateutil ~= 2.8.2
    cryptography
    aiohttp
    pyOpenSSL
    pymiproxy

[options.extras_require]
mitmproxy = mitmproxy ~= 7.0.4

[options.packages.find]
where = src